tests/ui/concurrent_cached_result_fallback_disk_exclusive.stderr
error: `result_fallback` is only supported for the default in-memory sharded stores
 --> tests/ui/concurrent_cached_result_fallback_disk_exclusive.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
